--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       retries: 10
 
   searchapi:
+    image: "mariaffnandez/imdb-api"
     container_name: searchApi
     hostname: "searchapi"
     ports:
